--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -179,18 +179,14 @@
     </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:elevation="20dp">
-
+        android:layout_gravity="center"
+        android:layout_marginTop="-20dp"
+        android:elevation="30dp">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-20dp"
-            android:text="Register"
-            >
-
-        </Button>
+            android:text="Register"/>
     </LinearLayout>
 </LinearLayout>
