--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
 
-                    android:inputType="numberPassword" />
+                    android:inputType="number" />
             </LinearLayout>
 
             <LinearLayout
@@ -118,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
                     android:ems="10"
-                    android:inputType="Email">
+                    android:inputType="textEmailAddress">
 
                 </EditText>
             </LinearLayout>
@@ -142,7 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
                     android:ems="10"
-                    android:inputType="text">
+                    android:inputType="textPassword">
 
                 </EditText>
             </LinearLayout>
@@ -189,4 +189,32 @@
             android:layout_height="wrap_content"
             android:text="Register"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:text="Do you have an account">
+
+        </TextView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="LOGIN"
+            android:layout_marginTop="-15dp"
+            android:textColor="#DB3D91"
+            android:textSize="15dp">
+
+        </Button>
+    </LinearLayout>
+
 </LinearLayout>
